# apecs

./: CMakeLists.txt  LICENSE  README.md  apecs.hpp
example/: apecs_example.m.cpp
examples/: apecs_example.m.cpp  generator.cpp  generator.hpp  meta.cpp  meta.hpp  sparse_set.cpp  sparse_set.hpp
include/apecs/: apecs.hpp
src/: CMakeLists.txt  apecs.h  apecs.hpp  apecs_example.m.cpp
tests/: CMakeLists.txt  fixed_handle.cpp  fixed_registry.cpp  generator.cpp  handle.cpp  meta.cpp  registry.cpp  sparse_set.cpp
